# serialization

./: .gitignore  CMakeLists.txt  README.md
include/: binary.hpp  serialization.hpp
src/: main.cpp
